--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Select Xcode 
-      run: sudo xcode-select -switch /Applications/Xcode_15.0.app
+      run: sudo xcode-select -switch /Applications/Xcode.app
 
     - name: Xcode version
       run: /usr/bin/xcodebuild -version
