--- a/.github/workflows/CI_iOS.yml
+++ b/.github/workflows/CI_iOS.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI_iOS
 
 on:
   # push:
@@ -23,4 +23,4 @@ jobs:
       run: /usr/bin/xcodebuild -version
 
     - name: Build and test
-      run: xcodebuild clean build test -project EssentialFeed/EssentialFeed.xcodeproj -scheme "CI" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk macosx -destination "platform=macOS" ONLY_ACTIVE_ARCH=YES
+      run: xcodebuild clean build test -workspace EssentialApp/EssentialApp.xcworkspace -scheme "CI_iOS" CODE_SIGN_IDENTITY="" CODE_SIGNING_REQUIRED=NO -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 15 Pro,OS=17.0" ONLY_ACTIVE_ARCH=YES
